--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
     //    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
