--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".custom_view.CustomViewActivity"/>
+        <activity android:name=".custom_view.LabelViewActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -18,11 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity android:name=".scroll_drag.ScrollDragMainActivity"/>
         <activity android:name=".scroll_drag.ScrollDragActivity"/>
         <activity android:name=".scroll_drag.ViewDragHelperActivity"/>
-
         <activity
             android:name=".scroll_drag.NavigationDrawActivity"
             android:theme="@style/AppTheme.NoActionBar">
