--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".custom_view.GlobeScreenShotActivity">
+        </activity>
         <activity android:name=".custom_view.CustomViewActivity"/>
         <activity android:name=".custom_view.LabelViewActivity"/>
         <activity android:name=".MainActivity">
