--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,27 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
+//        mavenCentral()
+//        maven { url 'https://maven.fabric.io/public' }
+//        maven {url "https://jitpack.io"}
+
+        // maven库
+//        def cn = "http://maven.aliyun.com/nexus/content/groups/public/"
+//        def abroad = "http://central.maven.org/maven2/"
+//        // 先从url中下载jar若没有找到，则在artifactUrls中寻找
+//        maven {
+//            url cn
+//            artifactUrls abroad
+//        }
+//        maven { url "http://repo1.maven.org/maven2" }
+//        maven { url "https://jitpack.io" }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+//        maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
+//        maven { url 'https://maven.fabric.io/public' }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         
